# smart-calendar

./: .gitignore  README.md
astreinte/: .env  .gitignore  Cargo.toml  astreintes.db  astreintes.db-shm  astreintes.db-wal
astreinte/migrations/: 20260708131040_init_schema.sql  20260713111708_create_requests_table.sql  20260721091238_init_v2.sql
astreinte/src/: db.rs  main.rs  models.rs  routes.rs
astreinte/src/routes/: admin.rs  auth.rs  manager.rs  mod.rs  user.rs
astreinte/static/: admin.html  change-password.html  index.html  login.html  manager.html  user.html
