[package]
name = "astreinte"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bcrypt = "0.19.2"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs"] }
rand = "0.8"